Minor bug fix